fix issue
- fixed issue in hero where text was not centered vertically on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,8 @@
 }
 
 .hero__content-container {
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 0;
   bottom: 0;
