--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -1,5 +1,7 @@
 .hero {
   &__content-container {
+    display: flex;
+    align-items: center;
     position: absolute;
     top: 0;
     bottom: 0;
